@@ -191,7 +191,7 @@ module PluginAWeek #:nodoc:
           # Forces all attribute methods to be generated for the model so that
           # the reader/writer methods for the attribute are available
           def define_attribute_accessor
-            owner_class.define_attribute_methods
+            owner_class.define_attribute_methods if owner_class.table_exists?
             super
           end
           
